# python-stock-trader

./: .gitignore  README.md  pyproject.toml  requirements.in  requirements.txt  test_tickers_100.txt
.devcontainer/: devcontainer.json
src/: conftest.py  main.py  settings.py
src/acquisition/data_loaders/: data_loader.py  data_loader_factory.py  data_loader_factory_test.py  data_loader_test.py
src/acquisition/data_sources/: alpha_vantage.py  data_source.py  data_source_factory.py  data_source_test.py  local_csv.py  yahoo_finance.py
src/cli/: commands.py  commands_test.py
src/reporting/: generate_report.py  generate_report_test.py  performance_metrics.py  performance_metrics_test.py  visualizer.py  visualizer_factory.py  visualizer_test.py
src/simulation/: portfolio_manager.py  portfolio_manager_test.py  simulator.py  simulator_test.py
src/stock_trader/: .env_run  .env_test  __main__.py  conftest.py  main.py  settings.py
src/stock_trader/cli/: commands.py  commands_test.py
src/stock_trader/reporting/: generate_report.py  generate_report_test.py  history.py  performance_metrics.py  performance_metrics_test.py  visualizer.py  visualizer_factory.py  visualizer_runner.py  visualizer_test.py
src/stock_trader/simulation/: portfolio_manager.py  portfolio_manager_test.py  simulator.py  simulator_test.py
src/stock_trader/workflows/: plotting.py  (+3 more)
src/trading_algorithms/: factory.py  indicators.py  indicators_test.py  signals.py  signals_test.py
src/utils/: date_range_test.py
src/workflows/: backtesting.py  backtesting_test.py  plotting.py  plotting_test.py
(+19 files in other folders)
