[build-system]
requires = ["setuptools>=68.0.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-trader"
authors = [
    {name = "Krzysztof Wiśniewski", email = "k.k.wisniewski1@gmail.com"},
]
description = "A simple app for calculating technical signals for stocks"
readme = "README.md"
keywords = ["stocks", "technical analysis"]
license = {text = "CC BY-NC-SA 4.0"}
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.11"
dependencies = [
    "yfinance",
    "pandas",
    "numpy",
    "matplotlib",
    "mplfinance",
    "pydantic",
    "pydantic-settings",
    "click",
]
dynamic = ["version"]

[project.optional-dependencies]
jupyter = ["jupyter>=1.0"]
devel = [
    "pytest>=0.3",
    "matplotlib-stubs",
    "types-requests",
    "pandas-stubs",
    "freezegun",
    "scalene",
    "mypy"
]

[project.scripts]
stock-trader = "stock_trader.cli.commands:cli"

[tool.setuptools_scm]

[tool.black]
line-length = 120
target-version = ['py311']

[tool.mypy]
python_version = 3.11
no_namespace_packages = true
disallow_untyped_defs = true
show_error_codes = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true